Fix subheading typos

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Unarchiver.open(file).then(async function (archive) {
 			</div>
 			<div class="row gx-5 justify-content-center">
 				<div class="col-lg-12 mb-3">
-					<h4 class="fw-bolder">Archives</h4>
+					<h4 class="fw-bolder">Methods</h4>
 					<table class="table table-bordered">
 						<thead>
 							<tr>
@@ -232,7 +232,7 @@ Unarchiver.open(file).then(function(archive) {
 					</table>
 				</div>
 				<div class="col-lg-12">
-					<h4 class="fw-bolder">Archive entries</h4>
+					<h4 class="fw-bolder">Archive Entries</h4>
 					Each achive entry object contains the following attributes:
 					<pre>{
     "name": String,
