Add comment for unarchiver

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@ function readFile() {
 	<!-- Code highlighting JS -->
 	<script src="assets/js/prism.js"></script>
 
+	<!-- Unarchiver -->
 	<script src="dist/unarchiver.min.js"></script>
 
 	<!-- Page JS-->
